projects stop gap

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ table {
   font: 100%;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 /*main {
   padding: 20px 0px;
 }*/
